About page tittle update

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>My portfolio about page</title>
+  <title>My about page</title>
   <link rel="shortcut icon" href="./img/myblogo.jpg">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
