--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.production.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -35,7 +35,7 @@
   </header>
 
   <main>
-    <img src="img/bprofile.jpg" class="profile_portrait" alt="Bilana Profile Image">
+    <img src="img/bprofile.jpg" alt="Bilana Profile Image" class="profile_portrait">
     <h1>My Name is Bilyana</h1>
     <p>I am <span>UX Engineer</span> from Chicago,IL</p>
     <a href="#">Check out my code</a>
