--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.production.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -36,7 +36,7 @@
 
 
   <main>
-    <ul>
+    <ul class="contact-type">
       <li>
         <a href="mailto:user@test.com">user@test.com</a>
       </li>
